--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-validator": "^6.11.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^5.12.12",
     "morgan": "~1.9.1"
   }
